# qt-temp

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  qt-template.code-workspace
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/app/: CMakeLists.txt
apps/app/cmake/: linux-deploy-qt5.cmake  linux-deploy-qt6.cmake
apps/app/res/: qt.conf
apps/app/res/images/: images.qrc
apps/app/src/: app_config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/log-bench/: CMakeLists.txt
apps/log-bench/src/: main.cpp
libs/: CMakeLists.txt
libs/qtutils/: CMakeLists.txt  README.md
libs/qtutils/include/qtutils/: common_utils.h  config_manager.h  log_manager.h
libs/qtutils/src/: common_utils.cpp  config_manager.cpp  log_manager.cpp
libs/qtutils/tests/: CMakeLists.txt  test_common_utils.cpp  test_config_manager.cpp  test_log_manager.cpp
scripts/: build.sh
